@@ -304,7 +304,7 @@ messages.color.messages2=#000000
 messages.tag.position=bottom
 
 ##################################################
-# Folding 										 #
+# Folding                                        #
 ##################################################
 
 fold.comment=1
