@@ -287,13 +287,18 @@ update_main_menubar ()
 	gtk_widget_set_sensitive (em->copy, F);
 	gtk_widget_set_sensitive (em->paste, F);
 	gtk_widget_set_sensitive (em->clear, F);
+	
 	gtk_widget_set_sensitive (em->uppercase, F);
 	gtk_widget_set_sensitive (em->lowercase, F);
-	gtk_widget_set_sensitive (em->convert, F);
+	gtk_widget_set_sensitive (em->convert_crlf, F);
+	gtk_widget_set_sensitive (em->convert_lf, F);
+	gtk_widget_set_sensitive (em->convert_cr, F);
+	gtk_widget_set_sensitive (em->convert_auto, F);
+	
 	gtk_widget_set_sensitive (em->insert_c_gpl, F);
 	gtk_widget_set_sensitive (em->insert_cpp_gpl, F);
-    gtk_widget_set_sensitive (em->insert_py_gpl, F);
-    gtk_widget_set_sensitive (em->insert_username, F);
+	gtk_widget_set_sensitive (em->insert_py_gpl, F);
+	gtk_widget_set_sensitive (em->insert_username, F);
    	gtk_widget_set_sensitive (em->insert_datetime, F);
 	gtk_widget_set_sensitive (em->insert_header_template, F);
 	gtk_widget_set_sensitive (em->select_all, F);
